--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.41.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
@@ -21,6 +22,7 @@
     "nanoid": "^5.0.9",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.1"
   }
 }
